--- a/SMSTool/app/build.gradle
+++ b/SMSTool/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'org.greenrobot:greendao:3.2.0'
+    compile files('libs/guava-16.0.1.jar')
 }
