--- a/SMSTool/app/src/main/AndroidManifest.xml
+++ b/SMSTool/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.systemteam.smstool">
 
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_MMS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
