--- a/SMSTool/app/build.gradle
+++ b/SMSTool/app/build.gradle
@@ -2,8 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'SystemStudio'
+            keyPassword 'HUANGhl8811^'
+            storeFile file('F:/appkey/systemstudio.jks')
+            storePassword 'HUANGhl8811^'
+        }
+    }
     compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    buildToolsVersion '23.0.1'
     defaultConfig {
         applicationId "com.systemteam.smstool"
         minSdkVersion 15
@@ -16,12 +24,21 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
-    greendao{
+    greendao {
         schemaVersion 3
         targetGenDir 'src/main/java'
-        daoPackage   'com.systemteam.smstool.dao'
+        daoPackage 'com.systemteam.smstool.dao'
+    }
+
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
